[package]
name = "liquidation-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.metadata.workspaces]
version = "0.4.1"

[dependencies]
env_logger = "0.9.1"
tokio = { version = "1", features = ["full"] }
near-jsonrpc-client = "0.4.1"
log = "0.4.17"
borsh = "0.9.3"
serde = "1.0.145"
reqwest = { version = "0.11.12", features = ["json"], default-features = false }
thiserror = "1.0.37"
serde_json = "1.0.85"
lazy_static = "1.4.0"

near-crypto = "0.15.0"
near-primitives = "0.15.0"
near-chain-configs = "0.15.0"
near-jsonrpc-primitives = "0.15.0"

[dev-dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }


[features]
default = ["native-tls"]
any = []
sandbox = []
adversarial = []
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[package.metadata.docs.rs]
features = ["any", "sandbox"]

